--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="icon" href="https://img.icons8.com/?size=100&id=Mf9GSHclWwFB&format=png&color=000000">
         <title>🎉 CONGRATULATIONS SIHAM! YOU'VE WON!!! 🎉</title>
         <link rel="stylesheet" href="https://unpkg.com/xp.css" />
         <style>
