--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
             @keyframes bold {
                 0% { font-weight: normal; }
-                50% { font-weight: bold; }
-                50% { color: red;}
+                50% { font-weight: bold;
+                    color: red;}
                 100% { font-weight: normal; }
             }
 
@@ -110,6 +110,7 @@
                 <p class="small-text">
                     Beste Siham,<br>
                     Je bent geselecteerd om een <span class="small-text-bold">GRATIS</> </span>  krokodil te ontvangen! Klik op de knop hieronder om je prijs te claimen!
+                </p>
                 <button onclick="claimPrize()">CLAIM NOW!!!</button>
                 <div class="counter">
                     AANBIEDING DUURT NOG: <span class="bold">00:10</span> SECONDEN!
