--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </p>
                 <button onclick="claimPrize()">CLAIM NOW!!!</button>
                 <div class="counter">
-                    AANBIEDING DUURT NOG: <span class="bold">00:10</span> SECONDEN!
+                    AANBIEDING DUURT NOG: <span class="blink">00:10</span> SECONDEN!
                 </div>
                 <div class="warning">
                     ⚠️ NOG 2 KROKODILLEN TE WINNEN ⚠️
